fix(comp/PostsList): button click on iOS

--- a/static/app.css
+++ b/static/app.css
@@ -80,7 +80,7 @@ ol {
   user-select: none; /* Standard syntax */
 }
 
-.button {
+button {
   /* Variables */
  --button_radius: 0.75em;
  --button_color: #dddddd;
@@ -109,14 +109,14 @@ ol {
  transition: transform 0.1s ease, -webkit-transform 0.1s ease;
 }
 
-.button:hover .button_top {
+button:hover .button_top {
   /* Pull the button upwards when hovered */
  -webkit-transform: translateY(-0.33em);
      -ms-transform: translateY(-0.33em);
          transform: translateY(-0.33em);
 }
 
-.button:active .button_top {
+button:active .button_top {
   /* Push the button downwards when pressed */
  -webkit-transform: translateY(0);
      -ms-transform: translateY(0);
